syntax = "proto3";

package visionapi;

option java_package = "de.starwit.visionapi";

import "visionapi/common.proto";

message SaeMessage {
  VideoFrame frame = 1;
  repeated Detection detections = 2;
  Metrics metrics = 99;
}

message VideoFrame {
  string source_id = 1;
  uint64 timestamp_utc_ms = 2;
  Shape shape = 3;
  bytes frame_data = 4;
  bytes frame_data_jpeg = 5;
  GeoCoordinate camera_location = 6;
}

message Shape {
  uint32 height = 1;
  uint32 width = 2;
  uint32 channels = 3;
}

message Detection {
  BoundingBox bounding_box = 1;
  float confidence = 2;
  uint32 class_id = 3;
  bytes object_id = 4;
  GeoCoordinate geo_coordinate = 5;
}

message BoundingBox {
  float min_x = 1;
  float min_y = 2;
  float max_x = 3;
  float max_y = 4;
}

message Metrics {
  uint32 detection_inference_time_us = 1;
  uint32 tracking_inference_time_us = 2;
}